<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--General-->
    <string name="app_name">Empty Seat Navigator</string>
    <string name="action_settings">Settings</string>

    <!--Seat Activity-->
    <string name="group_size">Group Size</string>
    <string name="seat_formation">Seat Formation</string>
    <string name="seat_preference">Seat Preference</string>
    <string name="submit_size">Submit</string>
    <string name="reserve_seats">Make Reservation</string>
    <string name="theater_front">Theater Screen</string>
    <string name="theater_back">Back</string>
    <string name="pref_front">Front</string>
    <string name="pref_middle">Middle</string>
    <string name="pref_back">Back</string>
    <string name="pref_none">None</string>
    <string name="left">&lt;</string>
    <string name="right">&gt;</string>
    <string name="available_seats">Available Seats</string>
    <string name="button_lucky">I\'m Feeling Unlucky!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
