<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.navi.team.emptyseatnavigator.activities.SeatDisplayFragment"
    android:background="@drawable/bkg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layoutSeat">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutRowsOuter"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/screen_height"
                android:background="@drawable/screen"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:orientation="vertical"
                android:padding="@dimen/margin">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textFront"
                        android:layout_gravity="bottom" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/layoutRows"
                android:layout_margin="@dimen/activity_vertical_margin">
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/line_seperator"
            android:background="@color/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutFormation"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_formation"
                android:id="@+id/tvSeatFormation"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGroupSizeInformation"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/margin"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/margin"
                android:layout_gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLeft"
                    android:text="@string/left"
                    android:layout_gravity="left"
                    android:layout_margin="@dimen/margin"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reserve_seats"
                    android:id="@+id/buttonReserve"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonRight"
                    android:text="@string/right"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/margin"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>
